# heic-to-jpeg-converter

./: .gitignore  README.md  convert-heic.py  pyproject.toml
src/: __main__.py  config.py  logger.py  registry.py
src/converters/: audio.py  base.py  document.py  image.py  video.py
src/tui/: app.py
src/tui/screens/: main_screen.py  progress_screen.py
src/tui/widgets/: format_selector.py
tests/: test_registry.py
